@@ -12,7 +12,7 @@ In der Datei src/Makefile.modules lassen sich vier Module anschalten:
 * Eingabe: bei der graphischen Ausgabe kann ein Bot gesteuert werden
 * Eigenes Spiel: tronbot läuft ohne den Spielserver 
 Sind die Module gtkmm und Eingabe aktiv, kann über den Spielserver gegen einen eigenen Bot getestet werden, sind alle drei Module aktiv, kann ohne den Spieleserver gegen den Bot gespielt werden.
-* Threads: Threadunterstützung
+* Threads: Threadunterstützung, damit der PC auch richtig gefordert wird.
 Außerdem wird in der Datei ein Zeitlimit für die Tiefensuche angegeben.
 
 Es werden Raster von maximal 128*128 Größe unterstützt. Wird mehr benötigt, muss in src/spielraster/raster.h, Zeile 44 das „#define USE_BITSET“ auskommentiert werden, dadurch sinkt allerdings die Performance.
