@@ -1,7 +1,8 @@
 CXX ?= g++
-CXXFLAGS ?= -Wall -Werror -Wno-parentheses -std=c++14 -O0 -ggdb
+#CXXFLAGS ?= -Wall -Werror -Wno-parentheses -std=c++14 -O0 -ggdb
 #CXXFLAGS ?= -Wall -Werror -Wno-parentheses -std=c++14 -O3
-#CXXFLAGS ?= -Wall -Werror -Wno-parentheses -std=c++1y -O3
+# für g++ Version < 4.9
+CXXFLAGS ?= -Wall -Werror -Wno-parentheses -std=c++1y -O3
 
 DEPGEN_FLAGS ?= -MMD -MP -MT $@ -MF $(@:.o=.d)
 ifeq ($(USE_UI_GTKMM), true)
@@ -19,7 +20,7 @@ endif
 
 .PHONY: all
 
-# compile the objects
+# Objekte kompilieren
 .PHONY: objects
 objects: $(OBJECTS)
 
@@ -35,16 +36,16 @@ lib.a: $(OBJECTS) $(DIRECTORIES)
 
 -include $(OBJECTS:%.o=%.d)
 
-# call make for the subdirectories
+# make in den Unterverzeichnissen aufrufen
 .PHONY: directories
 directories: $(DIRECTORIES)
 
-# call make for the subdirectories
+# make in den Unterverzeichnissen aufrufen
 .PHONY : $(DIRECTORIES)
 $(DIRECTORIES) :
 	$(MAKE) -C $@
 
-# remove the object files in this directory and the subdirectories
+# Alle durch das Kompilieren erstellten Dateien entfernen
 .PHONY : clean
 clean :
 	-$(RM) *.o
@@ -56,7 +57,3 @@ ifeq ($(DEPTH),.)
 	-$(RM) tags
 endif
 	-for d in $(DIRECTORIES); do $(MAKE) -C $$d $@; done
-
-# clean the directory
-.PHONY: delete
-delete : clean
