@@ -1,5 +1,7 @@
 #!/bin/zsh
 
+# tronbot kompilieren und ausführen
+
 rm ./tronbot
 
 #export CXXFLAGS="-Wall -Werror -Wno-parentheses -std=c++14 -O3"
