@@ -1,3 +1,6 @@
+2014-12-18
+	- Version für den Wettbewerb erstellt
+
 2014-12-15
 	- Ermittlung der erreichbaren Raumgröße verbessert
 	- Hauptfenster: Textbereich breiter
